# joshuto

./: .Dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  flake.nix  rustfmt.toml  tea.yaml
.github/workflows/: automated-build.yml  autometed-build.yml  clippy.yml  nix.yaml  rust-linux-dev.yml  rust-linux-main.yml  rust-linux.yml  rust-macos-dev.yml  rust-macos-main.yml  rust-macos.yml  rust.yml
.github/workflows/dev/: rust-linux.yml  rust-macos.yml
.github/workflows/main/: rust-macos.yml
config/: bookmarks.toml  icons.toml  joshuto.toml  keymap.conf  keymap.toml  mimetype.toml  preview_file.sh  theme.toml
docs/: README.md  command_arguments.md  contributing.md  file_previews.md  image_previews.md  misc.md
docs/configuration/: README.md  icons.toml.md  joshuto.toml.md  keymap.toml.md  mimetype.toml.md  theme.toml.md
docs/configuration/custom_commands/: git_ignored  git_untracked  joshuto_git_conflicts  joshuto_git_root  joshuto_rg  joshuto_rgfzf
docs/configuration/tabbar/: README.md
docs/image_previews/: README.md  combined_with_text.md  kitty.md  ueberzug.md  ueberzugpp.md
lib/wordexp-rs/: Cargo.toml
lib/wordexp-rs/src/: lib.rs  ll.rs
nix/: default.nix
src/: bookmarks.rs  context.rs  error.rs  event.rs  history.rs  joshuto.rs  joshuto_sort.rs  joshuto_unix.rs  main.rs  preview.rs  run.rs  shadow.rs  sort.rs  structs.rs  tab.rs  textfield.rs  ui.rs  unix.rs
src/commands/: add_bookmark.rs  bookmark.rs  bulk_rename.rs  case_sensitivity.rs  change_directory.rs  command_keybind.rs  command_line.rs  commands.rs  cursor_move.rs  custom_search.rs  delete_files.rs  escape.rs  file_operations.rs  file_ops.rs  filter.rs  filter_glob.rs  filter_regex.rs  filter_string.rs  flat.rs  fzf.rs  fzf_bookmarks.rs  help.rs  history.rs  key_command.rs  line_nums.rs  linemode.rs  load_child.rs  mod.rs  new_directory.rs  numbered_command.rs  open_file.rs  open_terminal.rs  parent_cursor_move.rs  parent_directory.rs  paste_files.rs  preview_cursor_move.rs  quit.rs  reload.rs  reload_dir.rs  rename_file.rs  (+31 more)
src/commands/file_ops/: copy.rs  cut.rs  local_state.rs  mod.rs  paste.rs  paste_copy.rs  paste_cut.rs
src/config/: app.rs  app_raw.rs  bookmarks.rs  config.rs  config_type.rs  display_raw.rs  icon.rs  icon_raw.rs  keymap.rs  keymap_raw.rs  mimetype.rs  mimetype_raw.rs  mod.rs  preview.rs  sort_option_raw.rs  tab.rs  theme.rs
src/config/bookmarks/: bookmarks.rs  bookmarks_raw.rs  mod.rs
src/config/clean/: bookmarks.rs
src/config/default/: config.rs  default.rs  display.rs  mod.rs  preview.rs  sort.rs  tab.rs
src/constants/: command_name.rs  config.rs  mod.rs
src/context/: app_context.rs  commandline_context.rs  context.rs  local_state.rs  matcher.rs  message_queue.rs  mod.rs  page_type.rs  preview_context.rs  tab_context.rs  ui_context.rs  worker_context.rs
src/error/: error.rs  error_kind.rs  error_type.rs  mod.rs
src/event/: app_event.rs  mod.rs  process_event.rs
src/fs/: dirlist.rs  entry.rs  fs_extra_extra.rs  metadata.rs  mod.rs  options.rs
src/io/: dirlist.rs  entry.rs  file_operation.rs  io_observer.rs  io_worker.rs  metadata.rs  mod.rs  name_resolution.rs
src/joshuto/: command.rs  config.rs  context.rs  history.rs  input.rs  keymap.rs  keymapll.rs  keymaps.rs  mimetype.rs  mod.rs  navigation.rs  preview.rs  sort.rs  structs.rs  tab.rs  textfield.rs  theme.rs  ui.rs  unix.rs  window.rs
src/key_command/: command.rs  command_keybind.rs  constants.rs  impl_appcommand.rs  impl_appexecute.rs  impl_comment.rs  impl_completion.rs  impl_display.rs  impl_from_str.rs  impl_interactive.rs  impl_numbered.rs  key_command.rs  mod.rs  traits.rs
src/preview/: mod.rs  preview_default.rs  preview_dir.rs  preview_entry.rs  preview_file.rs  preview_sh.rs
src/run/: mod.rs  process_event.rs  process_io.rs  process_run_loop.rs  run_ui.rs
src/structs/: dirlist.rs  entry.rs
src/tab/: homepage.rs  mod.rs  nav_history.rs  options.rs  tab_struct.rs
src/traits/: app_execute.rs  config.rs  mod.rs  to_string.rs
src/types/: completion_kind.rs  config_type.rs  custom_command.rs  keybind.rs  keymap.rs  mod.rs
src/ui/: backend.rs  mod.rs  preview_area.rs  rect.rs  tab_list_builder.rs  tui_backend.rs
src/ui/views/: mod.rs  (+10 more)
src/util/: cwd.rs  devicons.rs  display.rs  display_option.rs  event.rs  filter.rs  format.rs  fs.rs  input.rs  input_process.rs  key_mapping.rs  keyparse.rs  load_child.rs  menu.rs  mimetype.rs  mod.rs  process.rs  search.rs  semaphore.rs  sort.rs  sort_option.rs  sort_type.rs  string.rs  style.rs  textfield.rs  to_string.rs  unix.rs  worker.rs
src/utils/: cwd.rs  format.rs  fs.rs  keyparse.rs  mimetype.rs  mod.rs  name_resolution.rs  process.rs  serde.rs  style.rs  title.rs  unix.rs
src/window/: mod.rs  page_state.rs  panel.rs  view.rs
src/workers/: mod.rs  preview_image_worker.rs  preview_worker.rs
utils/: Dockerfile  base.Dockerfile  install.sh
utils/docker/: Dockerfile  builder.Dockerfile
utils/nix/: default.nix
(+220 files in other folders)
