[package]
name = "joshuto"
version = "0.9.5"
authors = ["Jiayi Zhao <jeff.no.zhao@gmail.com>"]
description = "Terminal file manager inspired by ranger"
homepage = "https://github.com/kamiyaa/joshuto"
repository = "https://github.com/kamiyaa/joshuto"
license = "LGPL-3.0"
edition = "2021"
keywords = ["tui-rs", "ranger", "file_manager", "termion"]
categories = ['command-line-interface', 'command-line-utilities']

[profile.release]
strip = true

[dependencies]
alphanumeric-sort = "^1"
ansi-to-tui = { version = "^3.1.0", optional = true }
bitflags = { version = "^2", features = ["serde"] }
chrono = "^0"
clap = { version = "^4", features = ["derive"] }
clap_complete = "^4"
colors-transform = "^0"
dirs-next = "^2"
filetime = "^0"
globset = "^0"
lazy_static = "^1"
libc = "^0"
notify = "^6"
open = "^5"
phf = { version = "^0", features = ["macros"], optional = true }
rand = "^0"
regex = "1.9.3"
rustyline = "^12"
serde = { version = "^1", features = ["derive"] }
shell-words = "^1"
shellexpand = { version = "^3", features = ["full"] }
signal-hook = "^0"
termion = "^2"
toml = "^0"
unicode-segmentation = "^1"
unicode-width = "^0"
walkdir = "^2"
whoami = "^1"
xdg = "^2"

[dependencies.nix]
version = "^0"
default_features = false
features = ["user"]

[dependencies.ratatui]
version = "^0"
default-features = false
features = ["termion"]

[dependencies.uuid]
version = "^1"
features = ["v4", "fast-rng", "macro-diagnostics"]

[features]
devicons = ["phf"]
file_mimetype = []
mouse = []
syntax_highlight = ["ansi-to-tui"]
default = ["devicons", "mouse", "syntax_highlight"]
