[package]
name = "joshuto"
version = "0.9.9"
authors = ["Jiayi Zhao <jeff.no.zhao@gmail.com>"]
description = "Terminal file manager inspired by ranger"
homepage = "https://github.com/kamiyaa/joshuto"
repository = "https://github.com/kamiyaa/joshuto"
license = "LGPL-3.0"
edition = "2021"
keywords = ["ratatui", "ranger", "file_manager", "termion"]
categories = ['command-line-interface', 'command-line-utilities']

[profile.release]
lto = true
strip = true

[dependencies]
allmytoes = "^0.4"
alphanumeric-sort = "^1"
ansi-to-tui = { version = "^3.1.0", optional = true }
bitflags = { version = "^2", features = ["serde"] }
chrono = "^0"
clap = { version = "^4", features = ["derive"] }
clap_complete = "^4"
colors-transform = "^0"
dirs-next = "^2"
filetime = "^0"
globset = "^0"
image = "^0.25"
lazy_static = "^1"
lscolors = { version = "0.17.0", features = ["nu-ansi-term"] }
notify = "^6"
open = "^5"
phf = { version = "^0", features = ["macros"], optional = true }
rand = "^0.9"
ratatui-image = { version = "1.0.5", default-features = false, features = ["termion", "rustix", "serde"] }
regex = "1.9.3"
rustyline = "^12"
serde = { version = "^1", features = ["derive"] }
shadow-rs = "^0"
shell-words = "^1"
shellexpand = { version = "^3", features = ["full"] }
signal-hook = "^0"
termion = "^2"
toml = "^0"
unicode-segmentation = "^1"
unicode-width = "^0"
walkdir = "^2"
whoami = "^1"
xdg = "^2"
bytesize = "1.3.0"

[dependencies.nix]
version = "^0"
default-features = false
features = ["fs", "signal", "user"]

[dependencies.ratatui]
version = "^0"
default-features = false
features = ["termion"]

[dependencies.uuid]
version = "^1"
features = ["v4", "fast-rng", "macro-diagnostics"]

[build-dependencies]
shadow-rs = "0.26"

[features]
devicons = ["phf"]
file_mimetype = []
syntax_highlight = ["ansi-to-tui"]
default = ["devicons", "syntax_highlight"]
